fix responsive on iphone 11 pro

--- a/css/styles.css
+++ b/css/styles.css
@@ -9794,7 +9794,7 @@ button.bg-dark:focus {
 }
 
 .ml2 {
-  font-weight: 800;
+  font-weight: 900;
   font-size: 3.5em;
 }
 
@@ -10058,7 +10058,7 @@ p.lead {
   font-family: "Saira Extra Condensed", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   /* text-transform: uppercase; */
   font-weight: 500;
-  font-size: 1.5rem;
+  font-size: 1.45rem;
   color: var(--red)
 }
 
